# cfizz

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
analyze/: compartment.py  loop.py  oe.py
api/: __init__.py  quickplot.py
api/integrated/: __init__.py  apa_pileup.py  saddle_plot.py
api/integrated/tracks/: __init__.py
demo/data/: ACOX1.gtf  ATAC-Seq_hiPSC_var_div_hiPSC_nor_log2.75.4-76.34M.bw  CASKIN2.gtf  FBF1.gtf  FOXJ1.gtf  GALK1.gtf  GALR2.gtf  ITGB4.gtf  LLGL2.gtf  RECQL5.gtf  RNA_hiPSC_var_div_hiPSC_nor_log2.75.4-76.34M.bw  RNF157.gtf  SAP30BP.gtf  SRP68.gtf  TMEM94.gtf  TRIM65.gtf  TSEN54.gtf  UBALD2.gtf  UNC13D.gtf  UNK.gtf  WBP2.gtf  concordant_enhancer.chr17_75.4-76.34M.bed  hiPSC_nor_ATAC-Seq_chr17_mean.bw  hiPSC_nor_CUTTag-CTCF_chr17_mean.bw  hiPSC_nor_CUTTag-H3K27ac_chr17_mean.bw  hiPSC_nor_chr17_mean.bw  hiPSC_var_ATAC-Seq_chr17_mean.bw  hiPSC_var_CUTTag-CTCF_chr17_mean.bw  hiPSC_var_CUTTag-H3K27ac_chr17_mean.bw  hiPSC_var_chr17_mean.bw
examples/: 5_1_primary_analysis_template.py  5_2_primary_analysis_visualization.py  5_3_primary_analysis_pileup.py
examples/diff/: 6_1_differential_compute.py  6_2_differential_visualization.py  6_3_differential_pileup.py
examples/integrated/: 7_1_multi_omics_integrated.py  7_2_log2_tracks.py  7_3_multi_gene.py
io/: __init__.py  insulation.py  npy.py  npz.py  paths.py
preprocessing/: README.md  stats.py
src/cfizz/: __init__.py  config.py
src/cfizz/analyze/: __init__.py  distance.py  tad.py
src/cfizz/io/: cooler.py  loops.py  paths_helpers.py  tad.py
src/cfizz/preprocessing/: __init__.py  fastq2pairs.sh  pairs2mcool.sh
src/cfizz/utils/: __init__.py  coordinates.py  range_utils.py
src/cfizz/viz/: __init__.py  (+6 more)
utils/: bedpe_utils.py
viz/: colorbar.py  heatmap_tad_ext.py  pileup.py  tad.py  tracks.py
(+61 files in other folders)
